--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,26 @@
 <resources>
-    <!-- Strings related to login -->
+    <!-- String related to App -->
     <string name="app_name">Mafia Mania</string>
     <string name="action_settings">Settings</string>
-    <string name="string_enter_username">Enter your username</string>
-    <string name="string_choose_username">Choose your username</string>
+
+    <!-- String related to Hint String -->
+    <string name="hint_string_enter_username">Enter your username</string>
+    <string name="hint_string_choose_username">Choose your username</string>
+    <string name="hint_text_enter_player_name">Enter the player name</string>
+
+    <!-- String related to Hyperlink -->
     <string name="text_signup"><a href="">Signup</a></string>
+
+    <!-- String related to Regular Text -->
     <string name="text_play">Select your play mode</string>
     <string name="text_or">\nOr</string>
+
+    <!-- String related to Buttons -->
     <string name="button_offline">Offline</string>
     <string name="button_online">Online</string>
     <string name="button_login">Login</string>
     <string name="button_register">Register</string>
+    <string name="button_add">Add</string>
+    <string name="button_next">Next</string>
+
 </resources>
